# spark-sketches

./: .gitignore  README.md  build.sbt
.github/workflows/: bandit.yml  black.yml  pytest.yml  scala.yml
python/: .gitignore  Untitled.ipynb  pyproject.toml  sample.parquet  sample_join.parquet
python/.github/workflows/: tests.yml
python/src/minhash/: constants.py  count.py  deserialize.py  jaccard.py  merge.py  minhash.py
python/src/theta/: constants.py  deserialize.py  estimate.py  set_operations.py  theta.py
python/tests/: conftest.py  test_count.py  test_deserialize.py  test_jaccard.py  test_merge.py  test_minhash.py
python/tests/minhash/: conftest.py  test_count.py  test_deserialize.py  test_jaccard.py  test_merge.py
python/tests/theta/: conftest.py  test_estimate.py  test_serde.py  test_set_operations.py
src/main/scala/: Constants.scala  MinHash.scala  RandomLinearPermutations.scala  SerializedMinhash.scala  Sha1.scala  Sha1Hash32.scala  SparkUdfs.scala
src/main/scala/sketches/common/: IntersectionSketch.scala  SetDifferenceSketch.scala  Sketch.scala
src/main/scala/sketches/minhash/: Constants.scala  MinHash.scala  RandomLinearPermutations.scala  Sha1Hash32.scala  (+2 more)
src/test/resources/: log4j.properties
src/test/scala/: BaseSpec.scala  MinHashProp.scala  MinHashSpec.scala  MinHashSuite.scala  PropBaseSpec.scala  RandomLinearPermutationsProp.scala  RandomLinearPermutationsSpec.scala  SerializedMinHashSpec.scala  Sha1Hash32Prop.scala  Sha1Hash32Spec.scala  Sha1Prop.scala  Sha1Spec.scala  Sha1Suite.scala  SparkBaseSpec.scala  SparkUdfsSpec.scala
(+23 files in other folders)
