[tool.poetry]
name = "minhash"
version = "0.2.0"
description = ""
authors = ["Alberto Camara <camara@protonmail.com>"]
readme = "README.md"
packages = [{include = "minhash", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
